--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+  }
+  
+  .ant-btn-primary {
+    background-color: #1890ff;
+  }
+  
+  .ant-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .ant-btn svg {
+    margin-right: 8px;
+  }
+  
+  .ant-tabs-tab {
+    display: flex;
+    align-items: center;
+  }
+  
+  .ant-tabs-tab .anticon {
+    margin-right: 8px;
+  }
+  
